--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   keyboard_visibility: ^0.5.2
 
+  fluttertoast: ^4.0.1
+
   sqflite:
   path_provider:
   # The following adds the Cupertino Icons font to your application.
